# miden-faucet

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  _typos.toml  account.mac  faucet.mac  faucet_account.mac  package-lock.json  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: 1-bugreport.yml  2-feature-request.yml  3-task.yml
.github/actions/debian/: action.yml
.github/workflows/: book.yml  build-docker.yml  check-frontend.yml  lint.yml  publish-crates-dry-run.yml  publish-crates.yml  publish-debian.yml  publish-docker.yml
crates/backend/: Cargo.toml  README.md
crates/backend/src/: lib.rs  types.rs
crates/backend/src/faucet/: mod.rs  updates.rs
crates/backend/src/server/: api_key.rs  get_tokens.rs  mod.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: lib.rs  requests.rs  types.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: lib.rs  rpc_client.rs
crates/contracts/faucet-account/: Cargo.toml
crates/contracts/faucet-account/src/: lib.rs
crates/contracts/mint-tx/: Cargo.toml  README.md  build.rs
crates/contracts/mint-tx/src/: lib.rs
crates/faucet/: Cargo.toml  README.md  build.rs
crates/faucet/asm/tx_scripts/: mint.masm
crates/faucet/src/: lib.rs  note_screener.rs  package.rs  requests.rs  types.rs
crates/faucet/src/scripts/: transaction_script.masm
crates/frontend/: Cargo.toml  README.md
crates/frontend/src/: frontend.rs  lib.rs
crates/frontend/src/static/: index.js
crates/mint-script/: Cargo.toml  README.md
crates/mint-script/src/: lib.rs
crates/mint-tx/: Cargo.toml
crates/pow/: Cargo.toml  README.md
crates/pow/src/: api_key.rs  challenge.rs  challenge_cache.rs  lib.rs  tests.rs  utils.rs
docker/: entrypoint.sh
docs/: book.toml
docs/src/: SUMMARY.md  api-usage.md  index.md  rest-api.md
docs/src/architecture/: overview.md
docs/src/examples/rust/: request_tokens.rs
docs/src/examples/typescript/: package.json  request_tokens.ts  tsconfig.json
docs/src/getting-started/: cli.md  configuration.md  installation.md  quick-start.md
packaging/faucet/: miden-faucet-operator.service  miden-faucet.service  postinst  postrm
scripts/: publish-crates.sh
