[workspace]
members = ["bin/faucet"]

resolver = "2"

[workspace.package]
authors      = ["Miden contributors"]
edition      = "2024"
exclude      = [".github/"]
homepage     = "https://miden.xyz"
license      = "MIT"
readme       = "README.md"
repository   = "https://github.com/0xMiden/miden-faucet"
rust-version = "1.87"
version      = "0.10.0"

# Optimise the cryptography for faster tests involving account creation.
[profile.test.package.miden-crypto]
opt-level = 2

[workspace.dependencies]
# miden-node dependencies.
miden-node-utils           = { version = "0.10.0" }
miden-remote-prover-client = { version = "0.10.0" }

# miden-base aka protocol dependencies. These should be updated in sync.
miden-lib     = { version = "0.10.0" }
miden-objects = { default-features = false, version = "0.10.0" }
miden-tx      = { default-features = false, version = "0.10.0" }

# miden-client dependencies.
miden-client = { features = ["tonic"], version = "0.10.0" }

# External dependencies
anyhow       = { version = "1.0" }
http         = { version = "1.3" }
humantime    = { version = "2.2" }
rand         = { version = "0.9" }
thiserror    = { default-features = false, version = "2.0" }
tokio        = { features = ["rt-multi-thread"], version = "1.46" }
tokio-stream = { version = "0.1" }
tonic        = { version = "0.13" }
tower        = { version = "0.5" }
tower-http   = { features = ["cors", "trace"], version = "0.6" }
tracing      = { version = "0.1" }
url          = { features = ["serde"], version = "2.5" }

# Lints are set to warn for development, which are promoted to errors in CI.
[workspace.lints.clippy]
# Pedantic lints are set to a lower priority which allows lints in the group to be selectively enabled.
pedantic = { level = "warn", priority = -1 }

cast_possible_truncation    = "allow" # Overly many instances especially regarding indices.
ignored_unit_patterns       = "allow" # Stylistic choice.
large_types_passed_by_value = "allow" # Triggered by BlockHeader being Copy + 334 bytes.
missing_errors_doc          = "allow" # TODO: fixup and enable this.
missing_panics_doc          = "allow" # TODO: fixup and enable this.
module_name_repetitions     = "allow" # Many triggers, and is a stylistic choice.
must_use_candidate          = "allow" # This marks many fn's which isn't helpful.
should_panic_without_expect = "allow" # We don't care about the specific panic message.
# End of pedantic lints.
