[workspace]
members = ["bin/faucet", "crates/faucet"]

resolver = "2"

[workspace.package]
authors      = ["Miden contributors"]
edition      = "2024"
exclude      = [".github/"]
homepage     = "https://miden.xyz"
license      = "MIT"
readme       = "README.md"
repository   = "https://github.com/0xMiden/miden-faucet"
rust-version = "1.90"
version      = "0.13.0"

# Optimize the cryptography for faster tests involving account creation.
[profile.test.package.miden-crypto]
opt-level = 2

[workspace.dependencies]
miden-faucet-lib       = { path = "crates/faucet", version = "0.13" }
miden-pow-rate-limiter = { path = "crates/pow", version = "0.13" }

# Miden dependencies.
miden-client              = { git = "https://github.com/0xMiden/miden-client", rev = "17fd76c64bfc3b313bb2b2126a53e4a7088f0df8" }
miden-client-sqlite-store = { git = "https://github.com/0xMiden/miden-client", rev = "17fd76c64bfc3b313bb2b2126a53e4a7088f0df8" }

# External dependencies
anyhow                = { version = "1.0" }
http                  = { version = "1.3" }
humantime             = { version = "2.2" }
opentelemetry         = { version = "0.31" }
opentelemetry-otlp    = { default-features = false, features = ["grpc-tonic", "tls-roots", "trace"], version = "0.31" }
opentelemetry_sdk     = { features = ["rt-tokio", "testing"], version = "0.31" }
rand                  = { version = "0.9" }
serde                 = { features = ["derive"], version = "1.0" }
serde_json            = { version = "1.0" }
sha2                  = { version = "0.10" }
thiserror             = { default-features = false, version = "2.0" }
tokio                 = { features = ["rt-multi-thread"], version = "1.48" }
tokio-stream          = { version = "0.1" }
tonic                 = { version = "0.14" }
tower                 = { version = "0.5" }
tower-http            = { features = ["cors", "trace"], version = "0.6" }
tracing               = { version = "0.1" }
tracing-opentelemetry = { version = "0.32" }
tracing-subscriber    = { features = ["env-filter", "fmt", "json"], version = "0.3" }
url                   = { features = ["serde"], version = "2.5" }
uuid                  = { features = ["v4"], version = "1.10" }

# Lints are set to warn for development, which are promoted to errors in CI.
[workspace.lints.clippy]
# Pedantic lints are set to a lower priority which allows lints in the group to be selectively enabled.
pedantic = { level = "warn", priority = -1 }

cast_possible_truncation    = "allow" # Overly many instances especially regarding indices.
ignored_unit_patterns       = "allow" # Stylistic choice.
large_types_passed_by_value = "allow" # Triggered by BlockHeader being Copy + 334 bytes.
missing_errors_doc          = "allow" # TODO: fixup and enable this.
missing_panics_doc          = "allow" # TODO: fixup and enable this.
module_name_repetitions     = "allow" # Many triggers, and is a stylistic choice.
must_use_candidate          = "allow" # This marks many fn's which isn't helpful.
should_panic_without_expect = "allow" # We don't care about the specific panic message.
# End of pedantic lints.
