[package]
authors.workspace      = true
description            = "Miden faucet's logic"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["faucet", "miden"]
license.workspace      = true
name                   = "miden-faucet-lib"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
# Miden dependencies.
miden-client              = { features = ["tonic"], workspace = true }
miden-client-sqlite-store = { workspace = true }

# External dependencies.
anyhow    = { workspace = true }
rand      = { features = ["thread_rng"], workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
tokio     = { features = ["fs"], workspace = true }
tracing   = { workspace = true }
url       = { workspace = true }

[build-dependencies]
miden-client = { workspace = true }

[dev-dependencies]
miden-client = { features = ["testing", "tonic"], workspace = true }
