[package]
name = "miden-faucet-mint-tx"
version.workspace = true
edition.workspace = true

[lib]
# Build this crate as a self-contained, C-style dynamic library
# This is required to emit the proper Wasm module type
crate-type = ["cdylib"]

[dependencies]
# Miden SDK consists of a stdlib (intrinsic functions for VM ops, stdlib functions and types)
# and transaction kernel API for the Miden rollup
miden = { version = "0.7" }

[build-dependencies]
cargo-miden = { version = "0.5" }

[package.metadata.component]
package = "miden:mint-tx"

[package.metadata.miden]
project-kind = "transaction-script"
