[package]
authors.workspace      = true
description            = "Miden Proof-of-Work rate limiter"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "pow"]
license.workspace      = true
name                   = "miden-pow-rate-limiter"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
serde     = { features = ["derive"], version = "1.0" }
sha3      = { version = "0.10" }
thiserror = { workspace = true }
tokio     = { features = ["time"], workspace = true }

[dev-dependencies]
serde_json = { version = "1.0" }
tokio      = { features = ["macros", "rt", "time"], workspace = true }
