[package]
authors.workspace      = true
description            = "Miden Proof-of-Work rate limiter"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "pow"]
license.workspace      = true
name                   = "miden-pow-rate-limiter"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
serde     = { workspace = true }
sha2      = { workspace = true }
thiserror = { workspace = true }
tokio     = { features = ["time"], workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio      = { features = ["macros", "rt", "time"], workspace = true }
