[package]
name = "miden-faucet-account"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { workspace = true }

[package.metadata.component]
package = "miden:faucet-account"

[package.metadata.miden]
project-kind = "account"
supported-types = ["FungibleFaucet"]
