[package]
name = "miden-faucet-mint-tx"
authors.workspace      = true
description            = "Miden faucet's mint transaction script"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["mint", "miden", "faucet"]
license.workspace      = true
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { workspace = true }

[package.metadata.component]
package = "miden:mint-tx"

[package.metadata.miden]
project-kind = "transaction-script"
